<package>
    <name>amcl_2d_drone</name>
    <version>1.14.4</version>
    <description>
        <p>

        </p>
    </description>
    <url></url>
    <author></author>
    <maintainer></maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>rosbag</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_srvs</run_depend>

    <test_depend>rostest</test_depend>
    <test_depend>map_server</test_depend>
</package>
