<?xml version="1.0"?>
<package format="2">
  <name>drone_3d_nav</name>
  <version>0.0.0</version>
  <description>This package contains an implementation of drone 3D navigation in an OctoMap. The navigation is achieved using a PID controller and the path_planning package ensures an obstacle-free path inside the 3D map. By using the velocity commands, the IMU and the laser altimeter measurements, odometry estimation is calculated and is provided to the particle_filter package, which localizes the drone within the 3D map. Also, this package provides the ability to create trajectories for the drone to navigate through.
</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>drone_gazebo</depend>
  <depend>drone_description</depend>
  <depend>particle_filter</depend>
  <depend>octomap_server</depend>
  <depend>octomap_rviz_plugins</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>path_planning</depend>
  <depend>dynamic_reconfigure</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
