<?xml version="1.0"?>
<package format="2">
  <name>drone_coverage</name>
  <version>0.0.0</version>
  <description>This package contains an implementation of 3D coverage using a drone. Firstly, is extracts the targets within the OctoMap, according to a specific configuration of an RFID reader provided. Then, a post-process is applied to remove non-safe positions, calculate optimal orientation and minimize the cost of the total path. Finally, it navigates through the final points using smoothed obstacle-free paths, while simultaneously the drone localizes itself. It is advised to save the targets using a ROS bag file, so that the navigation can be done whenever is desired, just by playing back the ROS bag data.</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <!-- The *depend tags are used to specify dependencies -->

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>drone_gazebo</exec_depend>
  <depend>octomap_server</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
