<?xml version="1.0"?>
<package format="2">
  <name>drone_description</name>
  <version>0.0.0</version>
  <description>This package contains the basic model description of the drone to be used with Gazebo. It is based on Hector Quadrotor stack and modified according to our needs. It requires the existence of teraranger_description package for the use of the Teraranger Tower sensor.</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>teraranger_description</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
