<?xml version="1.0"?>
<package format="2">
  <name>drone_gazebo</name>
  <version>0.1.0</version>
  <description>This package contains some important utilities for using Hector Quadrotor with the Gazebo simulator. Contains an keyboard teleop for moving the drone around, handles the laser altimeter measurements and creates the necessary TF transforms from the drone movement. Also, contains the warehouse Gazebo world and the 2D/3D maps of it. Most of these utilities originally belong to the Hector Quadrotor ROS package and have been modified.</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_uav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>hector_quadrotor_model</depend>
  <depend>hector_quadrotor_controllers</depend>
  <depend>hector_quadrotor_controller_gazebo</depend>
  <depend>hector_quadrotor_gazebo_plugins</depend>
  <depend>hector_quadrotor_gazebo</depend>
  <depend>drone_description</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>
  <depend>teraranger_array_converter</depend>
  <depend>teraranger_array</depend>
  <depend>teraranger_description</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>octomap_ros</depend>

</package>
