<?xml version="1.0"?>
<package format="2">
  <name>particle_filter</name>
  <version>0.1.0</version>
  <description>This package contains an implementation of a 3D localization algorithm that is based on a Particle Filter. It consists of a Movement model that is acting according to the odom transforms, an Observation model that is based on the laser measurements, a Map model that contains important OctoMap functionalities and a State Distribution model that is responsible for the distribution of particles around the map.</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
