<?xml version="1.0"?>
<package format="2">
  <name>drone_gazebo</name>
  <version>0.1.0</version>
  <description>The drone_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kosmastsk@gmail.com">kosmastsk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/drone_gazebo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_quadrotor_interface</depend>
  <depend>hector_uav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>hector_quadrotor_model</depend>
  <depend>hector_quadrotor_controllers</depend>
  <depend>hector_quadrotor_pose_estimation</depend>
  <depend>hector_quadrotor_actions</depend>
  <depend>hector_quadrotor_controller_gazebo</depend>
  <depend>drone_description</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>hector_sensors_description</depend>
  <depend>custom_navigation_drone</depend>
  <depend>height_estimation</depend>
  <depend>teraranger_array_converter</depend>
  <depend>message_to_tf</depend>


</package>
